; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_uda134x.c_uda134x_soc_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_uda134x.c_uda134x_soc_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.snd_soc_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.snd_soc_codec* }
%struct.snd_soc_codec = type { %struct.snd_soc_codec*, %struct.snd_soc_codec* }

@SND_SOC_BIAS_STANDBY = common dso_local global i32 0, align 4
@SND_SOC_BIAS_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @uda134x_soc_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uda134x_soc_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.snd_soc_device*, align 8
  %4 = alloca %struct.snd_soc_codec*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.snd_soc_device* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.snd_soc_device* %6, %struct.snd_soc_device** %3, align 8
  %7 = load %struct.snd_soc_device*, %struct.snd_soc_device** %3, align 8
  %8 = getelementptr inbounds %struct.snd_soc_device, %struct.snd_soc_device* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %10, align 8
  store %struct.snd_soc_codec* %11, %struct.snd_soc_codec** %4, align 8
  %12 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %13 = load i32, i32* @SND_SOC_BIAS_STANDBY, align 4
  %14 = call i32 @uda134x_set_bias_level(%struct.snd_soc_codec* %12, i32 %13)
  %15 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %16 = load i32, i32* @SND_SOC_BIAS_OFF, align 4
  %17 = call i32 @uda134x_set_bias_level(%struct.snd_soc_codec* %15, i32 %16)
  %18 = load %struct.snd_soc_device*, %struct.snd_soc_device** %3, align 8
  %19 = call i32 @snd_soc_free_pcms(%struct.snd_soc_device* %18)
  %20 = load %struct.snd_soc_device*, %struct.snd_soc_device** %3, align 8
  %21 = call i32 @snd_soc_dapm_free(%struct.snd_soc_device* %20)
  %22 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %23 = getelementptr inbounds %struct.snd_soc_codec, %struct.snd_soc_codec* %22, i32 0, i32 1
  %24 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %23, align 8
  %25 = call i32 @kfree(%struct.snd_soc_codec* %24)
  %26 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %27 = getelementptr inbounds %struct.snd_soc_codec, %struct.snd_soc_codec* %26, i32 0, i32 0
  %28 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %27, align 8
  %29 = call i32 @kfree(%struct.snd_soc_codec* %28)
  %30 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %31 = call i32 @kfree(%struct.snd_soc_codec* %30)
  ret i32 0
}

declare dso_local %struct.snd_soc_device* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @uda134x_set_bias_level(%struct.snd_soc_codec*, i32) #1

declare dso_local i32 @snd_soc_free_pcms(%struct.snd_soc_device*) #1

declare dso_local i32 @snd_soc_dapm_free(%struct.snd_soc_device*) #1

declare dso_local i32 @kfree(%struct.snd_soc_codec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
